# TradeAlly

./: .replit  Procfile  Run  active_positions.json  ai_exit_evaluator.py  ai_risk_evaluator.py  ai_risk_evaluator_v2.py  analytics_system.py  backtester.py  base_strategy.py  comand.replit  config.py  divergence_detector.py  exit_signals_handler.py  instructions.md  main.py  market_data.py  market_regime.py  market_structure_builder.py  nixpacks.toml  position_monitor.py  pyproject.toml  replit.md  replit.nix  requirements.txt  sell_signal_message_generator.py  signal_history_db.py  signal_memory.py  subscribers.json  subscription_db.py  subscriptions.json  telegram_handler.py  test_phase2_integration.py  trading_analytics.db  trading_bot_memory.db  trading_engine.py  trading_knowledge.json
strategies/: Strategy.Sumari.txt  __init__.py  base_strategy.py  database.py  integration_guide.py  long_term_strategy.py  opportunistic_strategy.py  readme.strategy  scalping_strategy.py  swing_strategy.py
