[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "feedparser>=6.0.12",
    "pandas>=2.3.3",
    "python-telegram-bot==20.0",
    "ta>=0.11.0",
    "telegram>=0.0.1",
    "yfinance>=1.0",
]
